--- a/audacity-ffmpeg/audacity-ffmpeg.nuspec
+++ b/audacity-ffmpeg/audacity-ffmpeg.nuspec
@@ -14,6 +14,9 @@
     <summary>FFmpeg for Audacity</summary>
     <tags>audacity-ffmpeg audacity ac3 amr m4a wma ffmpeg admin</tags>
     <packageSourceUrl>https://github.com/jack1142/choco-auto/tree/master/audacity-ffmpeg</packageSourceUrl>
+	<dependencies>
+      <dependency id="audacity" version="2.1.2" />
+    </dependencies>
   </metadata>
   <files>
     <file src="tools\**" target="tools" />
