Save build status results to gist, edit README.md

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -24,10 +24,10 @@ environment:
 
   # ID of the gist used to save run results - create a gist under the github_user (secret or not) and grab the id - https://gist.github.com/name/id
   # Optional, leave empty to create anonymous gist
-  gist_id:
+  gist_id: 4a1ffb06ffe2a5216cb65b16ebe279df
 
   # Force test: gist id for test results
-  gist_id_test:
+  gist_id_test: 495d0cdb0263b8e7c5e9963fbc694a77
 
   # Chocolatey API key - to push updated packages
   api_key:
