--- a/manual/fastimageresizer/fastimageresizer.nuspec
+++ b/manual/fastimageresizer/fastimageresizer.nuspec
@@ -3,17 +3,17 @@
   <metadata>
     <id>fastimageresizer</id>
     <title>Fast Image Resizer</title>
-    <version>0.98</version>
+    <version>0.98.20181007</version>
     <authors>adionSoft</authors>
     <owners>jack1142</owners>
     <description>If you need to resize multiple images in a row, then Fast Image Resizer is just the tools you need. This simple application allows you to resize one or multiple images for web or email distribution in a very east way.</description>
     <projectUrl>https://adionsoft.net/fastimageresize/</projectUrl>
-    <iconUrl>https://cdn.rawgit.com/jack1142/choco-auto/442937000477cdeff895269238caa5ee7cd9c428/fastimageresizer/icons/fastimageresizer.png</iconUrl>
-    <licenseUrl>https://cdn.rawgit.com/jack1142/choco-auto/d9f676485ab8ee8c5ae11a10d55d48306708d9a5/fastimageresizer/fastimageresizer_license.md</licenseUrl>
+    <iconUrl>https://cdn.rawgit.com/jack1142/choco-auto/192938c1acb29ee53c6fc8efd29ab6eccedb7fe5/manual/fastimageresizer/icons/fastimageresizer.png</iconUrl>
+    <licenseUrl>https://cdn.rawgit.com/jack1142/choco-auto/192938c1acb29ee53c6fc8efd29ab6eccedb7fe5/manual/fastimageresizer/fastimageresizer_license.md</licenseUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <summary>Fast Image Resizer</summary>
     <tags>fastimageresizer fast image resizer freeware cross-platform batch admin</tags>
-    <packageSourceUrl>https://github.com/jack1142/choco-auto/tree/master/fastimageresizer</packageSourceUrl>
+    <packageSourceUrl>https://github.com/jack1142/choco-auto/tree/master/manual/fastimageresizer</packageSourceUrl>
   </metadata>
   <files>
     <file src="tools\**" target="tools" />
