sandboxie, sandboxie.install add <files> element to nuspec file

--- a/automatic/sandboxie.install/sandboxie.install.nuspec
+++ b/automatic/sandboxie.install/sandboxie.install.nuspec
@@ -44,4 +44,7 @@
     <tags>security virtualization forensics shareware nagscreen admin</tags>
     <packageSourceUrl>https://github.com/jack1142/choco-auto/tree/master/automatic/sandboxie.install</packageSourceUrl>
   </metadata>
+  <files>
+    <file src="tools\**" target="tools" />
+  </files>
 </package>
