--- a/automatic/sandboxie.install/sandboxie.install.nuspec
+++ b/automatic/sandboxie.install/sandboxie.install.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <id>sandboxie.install</id>
-    <version>5.27.2-beta</version>
+    <version>5.26.20190112</version>
     <title>Sandboxie (Install)</title>
     <authors>Ronen "tzuk" Tzur</authors>
     <owners>dtgm, jack1142</owners>
