--- a/automatic/sandboxie/sandboxie.nuspec
+++ b/automatic/sandboxie/sandboxie.nuspec
@@ -2,8 +2,8 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <id>sandboxie</id>
-    <version>5.28</version>
-    <title>Sandboxie</title>
+    <version>5.29.1-beta</version>
+    <title>Sandboxie Beta</title>
     <authors>Ronen "tzuk" Tzur</authors>
     <owners>dtgm, jack1142</owners>
     <licenseUrl>http://www.sandboxie.com/index.php?EndUserLicenseAgreement</licenseUrl>
@@ -44,7 +44,7 @@
     <tags>security virtualization forensics shareware nagscreen admin</tags>
     <packageSourceUrl>https://github.com/jack1142/choco-auto/tree/master/automatic/sandboxie</packageSourceUrl>
     <dependencies>
-      <dependency id="sandboxie.install" version="[5.28]" />
+      <dependency id="sandboxie.install" version="[5.29.1-beta]" />
     </dependencies>
   </metadata>
   <files>
