AU: 2 updated - sandboxie sandboxie.install [skip ci] https://gist.github.com/4a1ffb06ffe2a5216cb65b16ebe279df/b80916e0e698a946ca4dbd1b43360e7e7e8d036b

--- a/automatic/sandboxie/sandboxie.nuspec
+++ b/automatic/sandboxie/sandboxie.nuspec
@@ -2,8 +2,8 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <id>sandboxie</id>
-    <version>5.29.2-beta</version>
-    <title>Sandboxie Beta</title>
+    <version>5.30</version>
+    <title>Sandboxie</title>
     <authors>Ronen "tzuk" Tzur</authors>
     <owners>dtgm, jack1142</owners>
     <licenseUrl>http://www.sandboxie.com/index.php?EndUserLicenseAgreement</licenseUrl>
@@ -44,7 +44,7 @@
     <tags>security virtualization forensics shareware nagscreen admin</tags>
     <packageSourceUrl>https://github.com/jack1142/choco-auto/tree/master/automatic/sandboxie</packageSourceUrl>
     <dependencies>
-      <dependency id="sandboxie.install" version="[5.29.2-beta]" />
+      <dependency id="sandboxie.install" version="[5.30]" />
     </dependencies>
   </metadata>
   <files>
