AU: 1 updated - x-mouse-button-control [skip ci] https://gist.github.com/4a1ffb06ffe2a5216cb65b16ebe279df/1878f343fb8c7c8de979669737cb48a939ecec79

--- a/automatic/x-mouse-button-control/x-mouse-button-control.nuspec
+++ b/automatic/x-mouse-button-control/x-mouse-button-control.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>x-mouse-button-control</id>
     <title>X-Mouse Button Control</title>
-    <version></version>
+    <version>2.18.7</version>
     <authors>Phillip Gibbons</authors>
     <owners>jack1142</owners>
     <description>X-Mouse Button Control is a free tool for Windows that allows you to re-configure and expand the capabilities of your mouse.</description>
