--- a/automatic/sandboxie.install/sandboxie.install.nuspec
+++ b/automatic/sandboxie.install/sandboxie.install.nuspec
@@ -12,6 +12,12 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>A process sandbox helps to manage and limit access permissions a process has to your data.  Use it to safely test new software for usability, safely study behavior of known spyware and malware, or browse the web from a sandboxed browser to completely shield your computer and network from Internet Bad Things.
 
+## Parameters
+- `/Language:LANG_CODE` - The installation language. Defaults to English. Replace `LANG_CODE` with LCID code (e.g. 1033 for US English) or BCP-47 language tag (e.g. en-US for US English) for your language. [List of supported languages](https://github.com/jack1142/choco-auto/blob/master/automatic/sandboxie.install/LANGUAGES.md)
+
+These parameters can be passed to the installer with the use of `--params`.
+For example: `--params '"/Language:en-US"'`
+
 ### Features
 * Secure Web Browsing: Running your Web browser under the protection of Sandboxie means that all malicious software downloaded by the browser is trapped in the sandbox and can be discarded trivially.
 * Enhanced Privacy: Browsing history, cookies, and cached temporary files collected while Web browsing stay in the sandbox and don't leak into Windows.
