--- a/manual/sandboxie.install/sandboxie.install.nuspec
+++ b/manual/sandboxie.install/sandboxie.install.nuspec
@@ -2,18 +2,18 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <id>sandboxie.install</id>
-    <version>5.30.0.20190801</version>
+    <version>5.31.4</version>
     <title>Sandboxie (Install)</title>
     <authors>Ronen "tzuk" Tzur</authors>
     <owners>dtgm, jack1142</owners>
-    <licenseUrl>http://www.sandboxie.com/index.php?EndUserLicenseAgreement</licenseUrl>
+    <licenseUrl>https://www.sandboxie.com/EndUserLicenseAgreement</licenseUrl>
     <projectUrl>http://www.sandboxie.com/</projectUrl>
     <iconUrl>https://cdn.jsdelivr.net/gh/jack1142/choco-auto@eeff633ae1f1627cd55d3121ed91fe1638553587/automatic/sandboxie/icons/sandboxie.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>A process sandbox helps to manage and limit access permissions a process has to your data.  Use it to safely test new software for usability, safely study behavior of known spyware and malware, or browse the web from a sandboxed browser to completely shield your computer and network from Internet Bad Things.
 
 ## Parameters
-- `/Language:LANG_CODE` - The installation language. Defaults to English. Replace `LANG_CODE` with LCID code (e.g. 1033 for US English) or BCP-47 language tag (e.g. en-US for US English) for your language. [List of supported languages](https://github.com/jack1142/choco-auto/blob/master/automatic/sandboxie.install/LANGUAGES.md)
+- `/Language:LANG_CODE` - The installation language. Defaults to English. Replace `LANG_CODE` with LCID code (e.g. 1033 for US English) or BCP-47 language tag (e.g. en-US for US English) for your language. [List of supported languages](https://github.com/jack1142/choco-auto/blob/master/manual/sandboxie.install/LANGUAGES.md)
 
 These parameters can be passed to the installer with the use of `--params`.
 For example: `--params '"/Language:en-US"'`
@@ -24,31 +24,33 @@ For example: `--params '"/Language:en-US"'`
 * Secure E-mail: Viruses and other malicious software that might be hiding in your email can't break out of the sandbox and can't infect your real system.
 * Windows Stays Lean: Prevent wear-and-tear in Windows by installing software into an isolated sandbox.
 
-### Shareware; Free with limitations for personal, non-commercial use
-* After 30 days, nag screen appears that may be dismissed temporarily.
-* Limited to one sandbox at a time.
-* Only software explicitly requested may run in the sandbox (sandboxed programs must be started from Sandboxie program rather than optionally intercepted on the fly).
-* For more information about licensing, see http://www.sandboxie.com/index.php?RegisterSandboxie and the [licensing FAQ](http://www.sandboxie.com/index.php?FAQ_Licensing).
+### Free with no limitations
+Since version 5.31.4 Sandboxie is now available for free with no limitations. Sophos is also planning on making this program open source.
 
 ### Documentation
-* [How it works](http://www.sandboxie.com/index.php?HowItWorks)
-* [FAQ](http://www.sandboxie.com/index.php?FrequentlyAskedQuestions)
-* [Manual](http://www.sandboxie.com/index.php?HelpTopics)
-* [Known program conflicts](http://www.sandboxie.com/index.php?KnownConflicts)
+* [How it works](http://www.sandboxie.com/HowItWorks)
+* [FAQ](http://www.sandboxie.com/FrequentlyAskedQuestions)
+* [Manual](http://www.sandboxie.com/HelpTopics)
+* [Known program conflicts](http://www.sandboxie.com/KnownConflicts)
 
 ### Community
-* [Forum](http://forums.sandboxie.com/phpBB3/)</description>
+* [Forum](https://community.sophos.com/products/sandboxie/f/forum)</description>
     <summary>Executes processes in a protected, isolated space, otherwise known as a "sandbox"</summary>
     <releaseNotes>#### Program
-* [News](http://forums.sandboxie.com/phpBB3/viewforum.php?f%3D2)
-* [Release log](http://www.sandboxie.com/index.php?AllVersions)
-* [Changelog](http://www.sandboxie.com/index.php?VersionChanges)
+* [Release log](http://www.sandboxie.com/AllVersions)
+---
+Release 5.31.4 (Released: September 10th, 2019)
+* Removed license check and activation requirements.
+* Fix IE download issues on Windows 7 and 10
+* Fix IE download issues (and some file rename failures) on Windows 10 Spring 2019
+
+[Changelog for versions before 5.31.4](http://www.sandboxie.com/VersionChanges)
 
 #### Package
-* Automatically built and uploaded by [jack1142](https://chocolatey.org/profiles/jack1142)</releaseNotes>
-    <copyright>© 2004 Sandboxie Holdings LLC, © Dec 2013 Invincea</copyright>
-    <tags>security virtualization forensics shareware nagscreen admin</tags>
-    <packageSourceUrl>https://github.com/jack1142/choco-auto/tree/master/automatic/sandboxie.install</packageSourceUrl>
+* Built and uploaded by [jack1142](https://chocolatey.org/profiles/jack1142)</releaseNotes>
+    <copyright>© 2004-2019 Sandboxie Holdings LLC</copyright>
+    <tags>security virtualization forensics admin</tags>
+    <packageSourceUrl>https://github.com/jack1142/choco-auto/tree/master/manual/sandboxie.install</packageSourceUrl>
   </metadata>
   <files>
     <file src="tools\**" target="tools" />
