--- a/automatic/sandboxie.install/sandboxie.install.nuspec
+++ b/automatic/sandboxie.install/sandboxie.install.nuspec
@@ -1,19 +1,24 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
-    <id>sandboxie</id>
+    <id>sandboxie.install</id>
     <version>5.31.4</version>
-    <title>Sandboxie</title>
+    <title>Sandboxie (Install)</title>
     <authors>Ronen "tzuk" Tzur</authors>
     <owners>dtgm, jack1142</owners>
-    <licenseUrl>http://www.sandboxie.com/EndUserLicenseAgreement</licenseUrl>
-    <projectUrl>http://www.sandboxie.com/</projectUrl>
+    <licenseUrl>https://raw.githubusercontent.com/xanasoft/Sandboxie/master/LICENSE</licenseUrl>
+    <projectUrl>https://github.com/xanasoft/Sandboxie</projectUrl>
+    <projectSourceUrl>https://github.com/xanasoft/Sandboxie</projectSourceUrl>
+    <bugTrackerUrl>https://github.com/xanasoft/Sandboxie/issues</bugTrackerUrl>
     <iconUrl>https://cdn.jsdelivr.net/gh/jack1142/choco-auto@eeff633ae1f1627cd55d3121ed91fe1638553587/automatic/sandboxie/icons/sandboxie.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>A process sandbox helps to manage and limit access permissions a process has to your data.  Use it to safely test new software for usability, safely study behavior of known spyware and malware, or browse the web from a sandboxed browser to completely shield your computer and network from Internet Bad Things.
 
 ## Parameters
-If you want to use install parameters, use `sandboxie.install` package.
+- `/Language:LANG_CODE` - The installation language. Defaults to English. Replace `LANG_CODE` with LCID code (e.g. 1033 for US English) or BCP-47 language tag (e.g. en-US for US English) for your language. [List of supported languages](https://github.com/jack1142/choco-auto/blob/master/automatic/sandboxie.install/LANGUAGES.md)
+
+These parameters can be passed to the installer with the use of `--params`.
+For example: `--params '"/Language:en-US"'`
 
 ### Features
 * Secure Web Browsing: Running your Web browser under the protection of Sandboxie means that all malicious software downloaded by the browser is trapped in the sandbox and can be discarded trivially.
@@ -22,7 +27,7 @@ If you want to use install parameters, use `sandboxie.install` package.
 * Windows Stays Lean: Prevent wear-and-tear in Windows by installing software into an isolated sandbox.
 
 ### Free with no limitations
-Since version 5.31.4 Sandboxie is now available for free with no limitations. Sophos is also planning on making this program open source.
+Since version 5.31.4 Sandboxie is now available for free with no limitations. Sophos open sourced the program on April 8th, 2020.
 
 ### Documentation
 * [How it works](http://www.sandboxie.com/HowItWorks)
@@ -33,25 +38,13 @@ Since version 5.31.4 Sandboxie is now available for free with no limitations. So
 ### Community
 * [Forum](https://community.sophos.com/products/sandboxie/f/forum)</description>
     <summary>Executes processes in a protected, isolated space, otherwise known as a "sandbox"</summary>
-    <releaseNotes>#### Program
-* [Release log](http://www.sandboxie.com/AllVersions)
----
-Release 5.31.4 (Released: September 10th, 2019)
-* Removed license check and activation requirements.
-* Fix IE download issues on Windows 7 and 10
-* Fix IE download issues (and some file rename failures) on Windows 10 Spring 2019
-
-[Changelog for versions before 5.31.4](http://www.sandboxie.com/VersionChanges)
-
-#### Package
-* Built and uploaded by [jack1142](https://chocolatey.org/profiles/jack1142)</releaseNotes>
+    <releaseNotes>https://github.com/xanasoft/Sandboxie/releases</releaseNotes>
     <copyright>© 2004-2019 Sandboxie Holdings LLC</copyright>
     <tags>security virtualization forensics admin</tags>
-    <packageSourceUrl>https://github.com/jack1142/choco-auto/tree/master/manual/sandboxie</packageSourceUrl>
-    <dependencies>
-      <dependency id="sandboxie.install" version="[5.31.4]" />
-    </dependencies>
+    <packageSourceUrl>https://github.com/jack1142/choco-auto/tree/master/automatic/sandboxie.install</packageSourceUrl>
   </metadata>
   <files>
+    <file src="legal\**" target="legal" />
+    <file src="tools\**" target="tools" />
   </files>
 </package>
