AU: 2 updated - sandboxie sandboxie.install [skip ci] https://gist.github.com/4a1ffb06ffe2a5216cb65b16ebe279df/5d9bf28460c67b8087ef997bd431023a414af6ed

--- a/automatic/sandboxie/sandboxie.nuspec
+++ b/automatic/sandboxie/sandboxie.nuspec
@@ -2,8 +2,8 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <id>sandboxie</id>
-    <version>5.31.4</version>
-    <title>Sandboxie</title>
+    <version>5.40.1</version>
+    <title></title>
     <authors>Ronen "tzuk" Tzur</authors>
     <owners>dtgm, jack1142</owners>
     <licenseUrl>https://raw.githubusercontent.com/xanasoft/Sandboxie/master/LICENSE</licenseUrl>
@@ -40,7 +40,7 @@ Since version 5.31.4 Sandboxie is now available for free with no limitations. So
     <tags>security virtualization forensics admin</tags>
     <packageSourceUrl>https://github.com/jack1142/choco-auto/tree/master/automatic/sandboxie</packageSourceUrl>
     <dependencies>
-      <dependency id="sandboxie.install" version="[5.31.4]" />
+      <dependency id="sandboxie.install" version="[5.40.1]" />
     </dependencies>
   </metadata>
   <files>
