--- a/automatic/sandboxie/sandboxie.nuspec
+++ b/automatic/sandboxie/sandboxie.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <id>sandboxie</id>
-    <version>5.40.1</version>
+    <version>5.40.1.20200413</version>
     <title></title>
     <authors>Ronen "tzuk" Tzur</authors>
     <owners>dtgm, jack1142</owners>
@@ -40,7 +40,7 @@ Since version 5.31.4 Sandboxie is now available for free with no limitations. So
     <tags>security virtualization forensics admin</tags>
     <packageSourceUrl>https://github.com/jack1142/choco-auto/tree/master/automatic/sandboxie</packageSourceUrl>
     <dependencies>
-      <dependency id="sandboxie.install" version="[5.40.1]" />
+      <dependency id="sandboxie.install" version="[5.40.1.20200413]" />
     </dependencies>
   </metadata>
   <files>
