[AU sublimetext4:4.0.0.410700] fix nuspec

--- a/automatic/sublimetext4/sublimetext4.nuspec
+++ b/automatic/sublimetext4/sublimetext4.nuspec
@@ -12,7 +12,7 @@
     <licenseUrl>https://www.sublimetext.com/eula</licenseUrl>
     <docsUrl>https://www.sublimetext.com/support</docsUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
-    <summary>FFmpeg for Audacity</summary>
+    <summary>Sublime Text 4 - The sophisticated text editor for code, markup and prose.</summary>
     <tags>sublime text editor development ide trial admin</tags>
     <packageSourceUrl>https://github.com/jack1142/choco-auto/tree/main/automatic/sublimetext4</packageSourceUrl>
     <releaseNotes>https://www.sublimetext.com/download</releaseNotes>
