--- a/automatic/sandboxie/sandboxie.nuspec
+++ b/automatic/sandboxie/sandboxie.nuspec
@@ -2,14 +2,14 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <id>sandboxie</id>
-    <version>5.40.1.20200413</version>
-    <title></title>
-    <authors>Ronen "tzuk" Tzur</authors>
-    <owners>dtgm, jack1142</owners>
-    <licenseUrl>https://raw.githubusercontent.com/xanasoft/Sandboxie/master/LICENSE</licenseUrl>
-    <projectUrl>https://github.com/xanasoft/Sandboxie</projectUrl>
-    <projectSourceUrl>https://github.com/xanasoft/Sandboxie</projectSourceUrl>
-    <bugTrackerUrl>https://github.com/xanasoft/Sandboxie/issues</bugTrackerUrl>
+    <version></version>
+    <title>Sandboxie Classic</title>
+    <authors>David Xanatos, Sophos Group plc, Invincea Inc., Ronen Tzur</authors>
+    <owners>jack1142</owners>
+    <licenseUrl>https://raw.githubusercontent.com/sandboxie-plus/Sandboxie/master/LICENSE</licenseUrl>
+    <projectUrl>https://github.com/sandboxie-plus/Sandboxie</projectUrl>
+    <projectSourceUrl>https://github.com/sandboxie-plus/Sandboxie</projectSourceUrl>
+    <bugTrackerUrl>https://github.com/sandboxie-plus/Sandboxie/issues</bugTrackerUrl>
     <iconUrl>https://cdn.jsdelivr.net/gh/jack1142/choco-auto@eeff633ae1f1627cd55d3121ed91fe1638553587/automatic/sandboxie/icons/sandboxie.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>A process sandbox helps to manage and limit access permissions a process has to your data.  Use it to safely test new software for usability, safely study behavior of known spyware and malware, or browse the web from a sandboxed browser to completely shield your computer and network from Internet Bad Things.
@@ -35,12 +35,12 @@ Since version 5.31.4 Sandboxie is now available for free with no limitations. So
 ### Community
 * [Forum](https://community.sophos.com/products/sandboxie/f/forum)</description>
     <summary>Executes processes in a protected, isolated space, otherwise known as a "sandbox"</summary>
-    <releaseNotes>https://github.com/xanasoft/Sandboxie/releases</releaseNotes>
-    <copyright>© 2004-2019 Sandboxie Holdings LLC</copyright>
+    <releaseNotes>https://github.com/sandboxie-plus/Sandboxie/releases</releaseNotes>
+    <copyright>2020-present David Xanatos, 2017-2020 Sophos Group plc, 2013-2017 Invincea Inc., 2004-2013 Ronen Tzur</copyright>
     <tags>security virtualization forensics admin</tags>
     <packageSourceUrl>https://github.com/jack1142/choco-auto/tree/main/automatic/sandboxie</packageSourceUrl>
     <dependencies>
-      <dependency id="sandboxie.install" version="[5.40.1.20200413]" />
+      <dependency id="sandboxie.install" version="[]" />
     </dependencies>
   </metadata>
   <files>
