--- a/automatic/python3.8/python3.8.nuspec
+++ b/automatic/python3.8/python3.8.nuspec
@@ -2,13 +2,16 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>python3.8</id>
-    <version></version>
+    <version>3.8.10</version>
     <title>Python 3.8</title>
     <owners>jack1142</owners>
     <authors>Python Software Foundation</authors>
     <projectUrl>https://www.python.org</projectUrl>
     <iconUrl>https://cdn.jsdelivr.net/gh/chocolatey-community/chocolatey-packages@edba4a5849ff756e767cba86641bea97ff5721fe/icons/python.svg</iconUrl>
-    <copyright></copyright>
+    <copyright><![CDATA[Copyright © 2001-2021 Python Software Foundation. All rights reserved.
+Copyright © 2000 BeOpen.com. All rights reserved.
+Copyright © 1995-2000 Corporation for National Research Initiatives. All rights reserved.
+Copyright © 1991-1995 Stichting Mathematisch Centrum. All rights reserved.]]></copyright>
     <licenseUrl>https://docs.python.org/3.8/license.html</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <projectSourceUrl>https://github.com/python/cpython</projectSourceUrl>
