[audacity-ffmpeg] change update script to only automate some steps

--- a/manual/audacity-ffmpeg/audacity-ffmpeg.nuspec
+++ b/manual/audacity-ffmpeg/audacity-ffmpeg.nuspec
@@ -8,18 +8,19 @@
     <owners>jack1142</owners>
     <description>Allows Audacity to import and export many additional audio formats such as AC3, AMR(NB), M4A and WMA, and to import audio from video files.</description>
     <projectUrl>https://lame.buanzo.org/</projectUrl>
-    <iconUrl>https://cdn.jsdelivr.net/gh/jack1142/choco-auto@192938c1acb29ee53c6fc8efd29ab6eccedb7fe5/automatic/audacity-ffmpeg/icons/audacity-ffmpeg.png</iconUrl>
-    <licenseUrl>https://cdn.jsdelivr.net/gh/jack1142/choco-auto@192938c1acb29ee53c6fc8efd29ab6eccedb7fe5/automatic/audacity-ffmpeg/audacity-ffmpeg-license.txt</licenseUrl>
+    <iconUrl>https://cdn.jsdelivr.net/gh/Jackenmen/choco-auto@32b9074d77ec23766b150807e60e1f2acf1d91cb/manual/audacity-ffmpeg/icons/audacity-ffmpeg.png</iconUrl>
+    <licenseUrl>https://cdn.jsdelivr.net/gh/Jackenmen/choco-auto@32b9074d77ec23766b150807e60e1f2acf1d91cb/manual/audacity-ffmpeg/audacity-ffmpeg-license.txt</licenseUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <summary>FFmpeg for Audacity</summary>
     <tags>audacity-ffmpeg audacity ac3 amr m4a wma ffmpeg admin</tags>
-    <packageSourceUrl>https://github.com/jack1142/choco-auto/tree/main/automatic/audacity-ffmpeg</packageSourceUrl>
+    <packageSourceUrl>https://github.com/Jackenmen/choco-auto/tree/main/manual/audacity-ffmpeg</packageSourceUrl>
 	<dependencies>
       <dependency id="audacity" version="3.0.3" />
     </dependencies>
   </metadata>
   <files>
     <file src="legal\**" target="legal" />
-    <file src="tools\**" target="tools" />
+    <file src="tools\*.ps1" target="tools\" />
+    <file src="tools\FFmpeg_v2.2.2_for_Audacity_on_Windows_64bit.exe" target="tools\FFmpeg_v2.2.2_for_Audacity_on_Windows_64bit.exe" />
   </files>
 </package>
