--- a/automatic/pymanager/pymanager.nuspec
+++ b/automatic/pymanager/pymanager.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <id>pymanager</id>
-    <version>25.0.179</version>
+    <version></version>
     <title>Python Install Manager</title>
     <authors>Python Software Foundation</authors>
     <owners>jack1142</owners>
