AU: 1 updated - pymanager [skip ci] https://gist.github.com/Jackenmen/4a1ffb06ffe2a5216cb65b16ebe279df/af16ebaadf7a4058d3941db07c42c7a95cdd394f

--- a/automatic/pymanager/pymanager.nuspec
+++ b/automatic/pymanager/pymanager.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <id>pymanager</id>
-    <version></version>
+    <version>25.0-b5</version>
     <title>Python Install Manager</title>
     <authors>Python Software Foundation</authors>
     <owners>jack1142</owners>
