--- a/automatic/pymanager/pymanager.nuspec
+++ b/automatic/pymanager/pymanager.nuspec
@@ -12,7 +12,7 @@
     <bugTrackerUrl>https://github.com/python/pymanager/issues</bugTrackerUrl>
     <iconUrl>https://cdn.jsdelivr.net/gh/Jackenmen/choco-auto@840c0973b9e9ce29db4c32af8d9193b80e9e4b1c/automatic/pymanager/icons/pymanager.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>The Python install manager helps you to install, manage, and launch Python on Windows.
+    <description>The Python Install Manager 25.0b15 helps you to install, manage, and launch Python on Windows.
 
 After install, the "py" command is your tool of choice - try "py help" to see what it can do! (Not working? You may need to uninstall the old "Python launcher", and check "Manage app execution aliases" to ensure the command is enabled.)
 
