--- a/automatic/pymanager/pymanager.nuspec
+++ b/automatic/pymanager/pymanager.nuspec
@@ -16,7 +16,7 @@
 
 After install, the "py" command is your tool of choice - try "py help" to see what it can do! (Not working? You may need to uninstall the old "Python launcher", and check "Manage app execution aliases" to ensure the command is enabled.)
 
-Complete documentation is available at http://docs.python.org/3.14/using/windows
+Complete documentation is available at https://docs.python.org/3/using/windows.html
 
 ## Package Parameters
 - `/GlobalShortcuts:` - Choose if the global shortcuts directory should be added to PATH. By default, global shortcuts are added to machine or user PATH depending on choco's elevation status. Accepted options are:
